--- a/src/app/questionnare/pages/questionnare-list/questionnare-list.component.html
+++ b/src/app/questionnare/pages/questionnare-list/questionnare-list.component.html
@@ -1,7 +1,7 @@
-<div class="questions-container">
+<p-button pRipple [routerLink]="'/create'">Create a Question</p-button>
+
+<div class="questions-container mt-5">
   <app-answered-questions *ngIf="answeredQuestions$ | async as answeredQuestions" [questions]="answeredQuestions"></app-answered-questions>
   <p-divider layout="vertical"></p-divider>
   <app-unanswered-questions *ngIf="unansweredQuestions$ | async as unansweredQuestions" [questions]="unansweredQuestions"></app-unanswered-questions>
 </div>
-
-<p-button>Create a Question</p-button>
