--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,19 @@
 /* You can add global styles to this file, and also import other style files */
+
+
+html, body {
+  margin: 0;
+  height: 100%;
+}
+
+body {
+  background: var(--primary-600);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+
+.h-100 {
+  height: 100%;
+}
